Added links to images

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
           <div class="img">
             <div class="images__heading">Original:</div>
             <div class="airbnb__original"></div>
-            <a href="#" class="link">Link</a>
+            <a href="https://github.com/YoungVan757/portfolio/blob/master/img/airbnbmock.png?raw=true" class="link">Link</a>
           </div>
           <div class="img">
             <div class="images__heading">Mock Up:</div>
             <div class="airbnb__mock"></div>
-            <a href="#" class="link">Link</a>
+            <a href="https://github.com/YoungVan757/portfolio/blob/master/img/AirbnbMock.jpg?raw=true" class="link">Link</a>
           </div>
         </div>
       </div>
@@ -43,7 +43,7 @@
           <div class="img">
             <div class="images__heading">Original:</div>
             <div class="welovedaily__original"></div>
-            <a href="#" class="link">Link</a>
+            <a href="https://github.com/YoungVan757/portfolio/blob/master/img/WeLoveDaily.png?raw=true" class="link">Link</a>
           </div>
           <div class="img">
             <div class="images__heading">Mock Up:</div>
@@ -61,7 +61,7 @@
           <div class="img">
             <div class="images__heading">Original:</div>
             <div class="natgeo__original"></div>
-            <a href="#" class="link">Link</a>
+            <a href="https://github.com/YoungVan757/portfolio/blob/master/img/NatGeo.png?raw=true" class="link">Link</a>
           </div>
           <div class="img">
             <div class="images__heading">Mock Up:</div>
@@ -90,7 +90,7 @@
       <div class="contact">
         <div class="contact__text">
           email: youngv@vcu.edu<br />
-          github: youngvan757
+          GitHub: youngvan757
         </div>
         <div class="contact__mugshot"></div>
       </div>
