changed font size in hero

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="hero">
         VAN YOUNG
         <div class="hero__text">
-          web developer, recording engineer, videographer, ok musician, tetris
+          web developer / recording engineer / videographer / ok musician / tetris
           master
         </div>
       </div>
