media quieries for iPad and changed font-weight

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         </div>
       </div>
 
+      <div class="line"></div>
+
       <div class="welovedaily">
         <div class="heading">We Love Daily Mock Up</div>
         <div class="images">
@@ -89,6 +91,7 @@
 
       <div class="contact">
         <div class="contact__text">
+            Contact:<br>
           email: youngv@vcu.edu<br />
           GitHub: youngvan757
         </div>
