Changed heading text for images and stacked images in mobile view

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
         <div class="heading">Airbnb Mock Up</div>
         <div class="images">
           <div class="img">
-            <div class="images__heading">Original:</div>
+            <div class="images__heading">Inspiration:</div>
             <div class="airbnb__original"></div>
             <a href="https://github.com/YoungVan757/portfolio/blob/master/img/airbnbmock.png?raw=true" class="link">Link</a>
           </div>
           <div class="img">
-            <div class="images__heading">Mock Up:</div>
+            <div class="images__heading">Live Site:</div>
             <div class="airbnb__mock"></div>
-            <a href="https://github.com/YoungVan757/portfolio/blob/master/img/AirbnbMock.jpg?raw=true" class="link">Link</a>
+            <a href="https://github.com/YoungVan757/portfolio/blob/master/img/AirbnbMockUp.jpg?raw=true" class="link">Link</a>
           </div>
         </div>
       </div>
@@ -41,12 +41,12 @@
         <div class="heading">We Love Daily Mock Up</div>
         <div class="images">
           <div class="img">
-            <div class="images__heading">Original:</div>
+            <div class="images__heading">Inspiration:</div>
             <div class="welovedaily__original"></div>
             <a href="https://github.com/YoungVan757/portfolio/blob/master/img/WeLoveDaily.png?raw=true" class="link">Link</a>
           </div>
           <div class="img">
-            <div class="images__heading">Mock Up:</div>
+            <div class="images__heading">Live Site:</div>
             <div class="welovedaily__mock"></div>
             <a href="https://welovedailymockup.netlify.com/" class="link"
               >Link</a
@@ -59,12 +59,12 @@
         <div class="heading">National Geographic Mock Up</div>
         <div class="images">
           <div class="img">
-            <div class="images__heading">Original:</div>
+            <div class="images__heading">Inspiration:</div>
             <div class="natgeo__original"></div>
             <a href="https://github.com/YoungVan757/portfolio/blob/master/img/NatGeo.png?raw=true" class="link">Link</a>
           </div>
           <div class="img">
-            <div class="images__heading">Mock Up:</div>
+            <div class="images__heading">Live Site:</div>
             <div class="natgeo__mock"></div>
             <a href="https://natgeomockup.netlify.com/" class="link">Link</a>
           </div>
@@ -75,12 +75,12 @@
         <div class="heading">The Sill Mock Up</div>
         <div class="images">
           <div class="img">
-            <div class="images__heading">Original:</div>
+            <div class="images__heading">Inspiration:</div>
             <div class="sill"></div>
             <a href="https://www.thesill.com/" class="link">Link</a>
           </div>
           <div class="img">
-            <div class="images__heading">Mock Up:</div>
+            <div class="images__heading">Live Site:</div>
             <div class="chill"></div>
             <a href="https://thechill.netlify.com/" class="link">Link</a>
           </div>
