--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <div class="img">
             <div class="images__heading">Live Site:</div>
             <div class="airbnb__mock"></div>
-            <a href="https://github.com/YoungVan757/portfolio/blob/master/img/AirbnbMockUp.jpg?raw=true" class="link">Link</a>
+            <a href="https://airbnbmockup.netlify.com/" class="link">Link</a>
           </div>
         </div>
       </div>
