Added current project to portfolio

--- a/index.html
+++ b/index.html
@@ -25,14 +25,12 @@
         <div class="heading">Airbnb Mock Up</div>
         <div class="images">
           <div class="img">
-            <div class="images__heading">Inspiration:</div>
+              <a href="https://github.com/YoungVan757/portfolio/blob/master/img/airbnbmock.png?raw=true" class="link">Inspiration:</a>
             <div class="airbnb__original"></div>
-            <a href="https://github.com/YoungVan757/portfolio/blob/master/img/airbnbmock.png?raw=true" class="link">Link</a>
           </div>
           <div class="img">
-            <div class="images__heading">Live Site:</div>
+            <a href="https://airbnbmockup.netlify.com/" class="link">Live Site:</a>
             <div class="airbnb__mock"></div>
-            <a href="https://airbnbmockup.netlify.com/" class="link">Link</a>
           </div>
         </div>
       </div>
@@ -41,16 +39,12 @@
         <div class="heading">We Love Daily Mock Up</div>
         <div class="images">
           <div class="img">
-            <div class="images__heading">Inspiration:</div>
+              <a href="https://github.com/YoungVan757/portfolio/blob/master/img/WeLoveDaily.png?raw=true" class="link">Inspiration:</a>
             <div class="welovedaily__original"></div>
-            <a href="https://github.com/YoungVan757/portfolio/blob/master/img/WeLoveDaily.png?raw=true" class="link">Link</a>
           </div>
           <div class="img">
-            <div class="images__heading">Live Site:</div>
+              <a href="https://welovedailymockup.netlify.com/" class="link">Live Site:</a>
             <div class="welovedaily__mock"></div>
-            <a href="https://welovedailymockup.netlify.com/" class="link"
-              >Link</a
-            >
           </div>
         </div>
       </div>
@@ -59,14 +53,12 @@
         <div class="heading">National Geographic Mock Up</div>
         <div class="images">
           <div class="img">
-            <div class="images__heading">Inspiration:</div>
+              <a href="https://github.com/YoungVan757/portfolio/blob/master/img/NatGeo.png?raw=true" class="link">Inspiration:</a>
             <div class="natgeo__original"></div>
-            <a href="https://github.com/YoungVan757/portfolio/blob/master/img/NatGeo.png?raw=true" class="link">Link</a>
           </div>
           <div class="img">
-            <div class="images__heading">Live Site:</div>
+            <a href="https://natgeomockup.netlify.com/" class="link">Live Site:</a>
             <div class="natgeo__mock"></div>
-            <a href="https://natgeomockup.netlify.com/" class="link">Link</a>
           </div>
         </div>
       </div>
@@ -75,15 +67,22 @@
         <div class="heading">The Sill Mock Up</div>
         <div class="images">
           <div class="img">
-            <div class="images__heading">Inspiration:</div>
+            <a href="https://www.thesill.com/" class="link">Inspiration:</a>
             <div class="sill"></div>
-            <a href="https://www.thesill.com/" class="link">Link</a>
           </div>
           <div class="img">
-            <div class="images__heading">Live Site:</div>
+              <a href="https://thechill.netlify.com/" class="link">Live Site:</a>
             <div class="chill"></div>
-            <a href="https://thechill.netlify.com/" class="link">Link</a>
           </div>
+        </div>
+      </div>
+
+      <div class="tribe__container">
+        <div class="heading">Current Project</div>
+        <div class="tribe__text--body">Developing and designing app to launch 2020</div>
+        <div class="tribe__image"></div>
+        <div class="tribe__text">
+          
         </div>
       </div>
 
