--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
       <div class="tribe__container">
         <div class="heading">Current Project</div>
-        <div class="tribe__text--body">Developing and designing app to launch 2020</div>
+        <div class="tribe__text--body">Developing and designing app in React to launch 2020</div>
         <div class="tribe__image"></div>
         <div class="tribe__text">
           
