added image for real

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="heading">Airbnb Mock Up</div>
         <div class="images">
           <div class="img">
-              <a href="https://github.com/YoungVan757/portfolio/blob/master/img/airbnbmock.png?raw=true" class="link">Inspiration:</a>
+              <a href="https://github.com/YoungVan757/portfolio/blob/master/img/AirbnbMockUp.jpg?raw=true" class="link">Inspiration:</a>
             <div class="airbnb__original"></div>
           </div>
           <div class="img">
