--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="contact__text">
             Contact:<br>
           email: youngv@vcu.edu<br />
-          GitHub: youngvan757
+          <a href="https://github.com/YoungVan757" class="github">GitHub: youngvan757</a>
         </div>
         <div class="contact__mugshot"></div>
       </div>
