Adjusted styling for contact section

--- a/index.html
+++ b/index.html
@@ -87,12 +87,11 @@
       </div>
 
       <div class="contact">
-        <div class="contact__text">
-            Contact:<br>
-          email: youngv@vcu.edu<br />
-          <a href="https://github.com/YoungVan757" class="github">GitHub: youngvan757</a>
-        </div>
+        <a href="mailto:youngv@vcu.edu" class="contact__link">Email Me</a>
+          <a href="https://github.com/YoungVan757" class="contact__link">GitHub: youngvan757</a>
         <div class="contact__mugshot"></div>
+        </div>
+        
       </div>
     </div>
   </body>
