inserted target blans on links

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <div class="heading">Airbnb Mock Up</div>
         <div class="images">
           <div class="img">
-              <a href="https://github.com/YoungVan757/portfolio/blob/master/img/AirbnbMockUp.jpg?raw=true" class="link">Inspiration:</a>
+              <a href="https://github.com/YoungVan757/portfolio/blob/master/img/AirbnbMockUp.jpg?raw=true" target="_blank" class="link">Inspiration:</a>
             <div class="airbnb__original"></div>
           </div>
           <div class="img">
-            <a href="https://airbnbmockup.netlify.com/" class="link">Live Site:</a>
+            <a href="https://airbnbmockup.netlify.com/" target="_blank" class="link">Live Site:</a>
             <div class="airbnb__mock"></div>
           </div>
         </div>
@@ -39,11 +39,11 @@
         <div class="heading">We Love Daily Mock Up</div>
         <div class="images">
           <div class="img">
-              <a href="https://github.com/YoungVan757/portfolio/blob/master/img/WeLoveDaily.png?raw=true" class="link">Inspiration:</a>
+              <a href="https://github.com/YoungVan757/portfolio/blob/master/img/WeLoveDaily.png?raw=true" target="_blank" class="link">Inspiration:</a>
             <div class="welovedaily__original"></div>
           </div>
           <div class="img">
-              <a href="https://welovedailymockup.netlify.com/" class="link">Live Site:</a>
+              <a href="https://welovedailymockup.netlify.com/" target="_blank" class="link">Live Site:</a>
             <div class="welovedaily__mock"></div>
           </div>
         </div>
@@ -53,11 +53,11 @@
         <div class="heading">National Geographic Mock Up</div>
         <div class="images">
           <div class="img">
-              <a href="https://github.com/YoungVan757/portfolio/blob/master/img/NatGeo.png?raw=true" class="link">Inspiration:</a>
+              <a href="https://github.com/YoungVan757/portfolio/blob/master/img/NatGeo.png?raw=true" target="_blank" class="link">Inspiration:</a>
             <div class="natgeo__original"></div>
           </div>
           <div class="img">
-            <a href="https://natgeomockup.netlify.com/" class="link">Live Site:</a>
+            <a href="https://natgeomockup.netlify.com/" target="_blank" class="link">Live Site:</a>
             <div class="natgeo__mock"></div>
           </div>
         </div>
@@ -67,11 +67,11 @@
         <div class="heading">The Sill Mock Up</div>
         <div class="images">
           <div class="img">
-            <a href="https://www.thesill.com/" class="link">Inspiration:</a>
+            <a href="https://www.thesill.com/" target="_blank" class="link">Inspiration:</a>
             <div class="sill"></div>
           </div>
           <div class="img">
-              <a href="https://thechill.netlify.com/" class="link">Live Site:</a>
+              <a href="https://thechill.netlify.com/" target="_blank" class="link">Live Site:</a>
             <div class="chill"></div>
           </div>
         </div>
@@ -88,7 +88,7 @@
 
       <div class="contact">
         <a href="mailto:youngv@vcu.edu" class="contact__link">Email Me</a>
-          <a href="https://github.com/YoungVan757" class="contact__link">GitHub: youngvan757</a>
+          <a href="https://github.com/YoungVan757" target="_blank" class="contact__link">GitHub: youngvan757</a>
         <div class="contact__mugshot"></div>
         </div>
         
