Added tribe app link

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 
       <div class="tribe__container">
         <div class="heading">Current Project</div>
-        <div class="tribe__text--body">Developing and designing app with React.js to launch 2020</div>
-        <div class="tribe__image"></div>
+        <div class="tribe__text--body">Developed social media app, called Tribe, still in testing stages. Feel free to use email 'tribe@mailinator' and password 'password' to look around :)</div>
+        <a href="https://tribe-app.netlify.com/" target='#mm'class="tribe__image"></a>
         <div class="tribe__text">
           
         </div>
