edited text for tribe app description

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
       <div class="tribe__container">
         <div class="heading">Current Project</div>
-        <div class="tribe__text--body">Developed social media app, called Tribe, still in testing stages. Feel free to use email 'tribe@mailinator' and password 'password' to look around :)</div>
+        <div class="tribe__text--body">Developed social media app using React for the front end and Firebase for the back end, called Tribe, still in testing stages. Feel free to use email 'tribe@mailinator' and password 'password' to look around :)</div>
         <a href="https://tribe-app.netlify.com/" target='#mm'class="tribe__image"></a>
         <div class="tribe__text">
           
