Added Young chop drum kit to portfolio

--- a/index.html
+++ b/index.html
@@ -80,10 +80,13 @@
       <div class="tribe__container">
         <div class="heading">Current Project</div>
         <div class="tribe__text--body">Developed social media app using React for the front end and Firebase for the back end, called Tribe, still in testing stages. Feel free to use email 'tribe@mailinator' and password 'password' to look around :)</div>
-        <a href="https://tribe-app.netlify.com/" target='#mm'class="tribe__image"></a>
-        <div class="tribe__text">
-          
-        </div>
+          <a href="https://tribe-app.netlify.com/" target='#mm'class="tribe__image"></a>
+      </div>
+
+      <div class="youngchop__container">
+        <div class="heading">Drum Kit App Project</div>
+        <div class="young__text--body">Built an online drum kit that samples famed producer, Young Chop</div>
+          <a href="https://youngchopdrumkit.netlify.com/" target='#mm'class="young__image"></a>
       </div>
 
       <div class="contact">
