--- a/index.html
+++ b/index.html
@@ -89,6 +89,12 @@
           <a href="https://youngchopdrumkit.netlify.com/" target='#mm'class="young__image"></a>
       </div>
 
+      <div class="clock__container">
+        <div class="heading">My Clock App</div>
+        <div class="clock__text--body">Click to view my clock app :)</div>
+        <a href="https://vansclock.netlify.com/" target="#mm" class="clock__image"></a>
+      </div>
+
       <div class="contact">
         <a href="mailto:youngv@vcu.edu" class="contact__link">Email Me</a>
           <a href="https://github.com/YoungVan757" target="_blank" class="contact__link">GitHub: youngvan757</a>
