--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       </div>
 
       <div class="contact">
-        <a href="mailto:youngv@vcu.edu" class="contact__link">Email Me</a>
+        <a href="mailto:youngv757@protonmail.com" class="contact__link">Email Me</a>
           <a href="https://github.com/YoungVan757" target="_blank" class="contact__link">GitHub: youngvan757</a>
         <div class="contact__mugshot"></div>
         </div>
